@@ -149,3 +149,13 @@ dl.portlet ul.navTree li a.contenttype-prenotazioniday {
 #week .slot .links a:link    {background-color:#008000;}
 #week .slot .links a:visited {background-color:#008000;}
 #week .slot .links a:hover   {background-color:#75AD0A;}
+
+#content .search-result-wrapper {
+    padding-top : 20px;
+}
+#content .search-result-wrapper .result-item {
+    margin: 10px 10px;s
+}
+#content .search-result-wrapper .result-item > a {
+    padding-left : 5px;
+}
