@@ -4,6 +4,9 @@ Changelog
 3.0 (unreleased)
 ================
 
+- Fix redirect in prenotazioni_move [nicolasenno]
+- Fix some i18n translations [nicolasenno] 
+- Added search pagination [nicolasenno]
 - Added upgrade step for "tipologia" field in prenotazioni_folder [nicolasenno]
 - Added upgrade step for "settimana_tipo" in prenotazioni_folder [nicolasenno]
 - Modified settimana_tipo colunms in prenotazioni_folder [nicolasenno]
